fix(css) modal witch & pro fontsize fix(js & css) service gap

--- a/src/components/ModalServices/style.scss
+++ b/src/components/ModalServices/style.scss
@@ -2,10 +2,9 @@
 
 .containerModal {
   position: relative;
- //outline: 2px solid green;
+
  // margin: 0;
   color: #333;
-  /* I'll give you this one for free lol */
   display: none;
  
 }
@@ -14,14 +13,13 @@
  position:fixed;
  left:calc(50vw - 240px);
  top: 40%;
- //margin-top:-230px;
 z-index: 100;
   display: flex;
   justify-content: center;    
   padding: 10px 20px;
   background: white;
-  width: 480px;
-  height: 180px;
+  width: auto;
+  height: auto;
   border-radius: 10px;
   box-shadow: 5px 5px 20px rgba(0,0,0,.2);
  }
