--- a/src/components/Pro/style.scss
+++ b/src/components/Pro/style.scss
@@ -10,7 +10,7 @@
 }
 .namePro{
   font-weight:bold;
-  font-size:25px;
+  font-size:20px;
 }
 .containerNamePro {
  
