--- a/src/components/Services/style.scss
+++ b/src/components/Services/style.scss
@@ -4,15 +4,21 @@
   height: auto;
   display: flex;
   flex-direction: column;
+  justify-content:center;
+  align-items: center;
 }
-
+.titlePrestation{
+  font-size:20px;
+}
 .containerServices {
     display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 100%;
-  gap: 5px;
+  width: 80%;
+  gap: 15px;
   padding-top: 70px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .prestaServices {
